--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,9 +12,12 @@ dependencies:
   firebase_core: ^4.2.1
   firebase_auth: ^6.1.2
   cloud_firestore: ^6.1.0
+  firebase_storage: ^13.0.4
   flutter_expandable_fab: ^2.5.2
+  image_picker: ^1.1.2
   maps_launcher: ^3.0.0+1
   url_launcher: ^6.3.2
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
