--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,10 @@ dependencies:
   flutter_expandable_fab: ^2.5.2
   maps_launcher: ^3.0.0+1
   url_launcher: ^6.3.2
+  firebase_storage: ^13.0.4
+  image_picker: ^1.2.1
+  insta_image_viewer: ^1.0.4
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
