--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: okoskert_internal
-description: "A new Flutter project."
+description: "An internal app for Okoskert"
 publish_to: 'none'
-version: 0.1.1
+version: 0.1.12
 
 environment:
   sdk: ^3.7.2
