--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,10 @@ dependencies:
   image_picker: ^1.2.1
   insta_image_viewer: ^1.0.4
   cached_network_image: ^3.4.1
+  table_calendar: ^3.2.0
+  flutter_localization: ^0.3.3
+  intl: ^0.20.2
+  shared_preferences: ^2.5.4
 
 dev_dependencies:
   flutter_test:
